tests/cases/syntax/error/declaration/duplicate-variable-name.soccam
;; duplicate-variable-name.soccam
;; Tests: 
(module duplicate-variable-name soccam
  (decl ([x int]
         [z chan])
    (seq
     (skip)
     (decl ([x int]
            [y int]
            [x int])
       (stop))))
)
